[package]
name = "adidns_walker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
csv = "1.3.1"
glob = "0.3.2"
serde = { version = "1.0.218", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
panic = "abort"

[profile.dev]
opt-level = 3
lto = true
panic = "abort"